fix font and gap between cards on mbl screen

--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,6 @@ body {
 }
 .btn-txt {
   color: #c5c5c5;
-  font-family: Inter;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -179,19 +178,7 @@ body {
 .get-started-div {
   margin: 0 auto;
 }
-.get-started-btn {
-  text-align: center;
-  font-family: Inter;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 16.8px;
-  padding: 12px;
-  color: #fff;
-  background-color: var(--primary-color);
-  border: none;
-  border-radius: 4px;
-}
+
 .third-section {
   padding: 40px 50px;
   /* margin-left: 50px;
@@ -230,7 +217,6 @@ body {
 }
 .card-text h3 {
   text-align: center;
-  font-family: Inter;
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
@@ -260,7 +246,6 @@ body {
 }
 .card-text p {
   text-align: center;
-  font-family: Inter;
   color: var(--secondary-text);
   font-size: 14px;
   font-style: normal;
@@ -277,7 +262,6 @@ body {
   justify-content: center;
 }
 .how h1 {
-  font-family: Inter;
   font-size: 38px;
   font-style: normal;
   font-weight: 600;
@@ -554,8 +538,6 @@ footer {
     padding: 0 20px;
   }
 
-  
-
   .logo.fc1 {
     flex-direction: column;
     align-items: flex-start;
@@ -713,7 +695,6 @@ footer {
   }
   .why {
     text-align: center;
-    font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
@@ -721,7 +702,6 @@ footer {
   }
   .why-p {
     text-align: center;
-    font-family: Inter;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
@@ -766,7 +746,7 @@ footer {
     letter-spacing: -0.051px;
   }
   .top-section {
-    padding: 55px 20px;
+    padding: 45px 20px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -782,7 +762,7 @@ footer {
 
   .card {
     grid-template-columns: 1fr;
-    gap: 16px;
+    gap: 24px;
   }
 
   .card-item {
